# twitch_sgqlc

./: README.md  pyproject.toml
scripts/: update_schema.sh  update_schema.sh.save
tests/: test_twitch_sgqlc.py
twitch_sgqlc/: __init__.py  client_id.py  schema.py
