[tool.poetry]
name = "twitch_sgqlc"
version = "0.1.0"
description = "https://github.com/profusion/sgqlc"
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sgqlc = "^12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
